# ay2324s1-course-assessment-g23

./: .env  .gitignore  README.md  backend.conf  check_format.sh  dasd  docker-compose.yaml  format.sh  nginx.conf  nginx_params_handle_websockets  package-lock.json  pyproject.toml  requirements.dev.txt  start_containers.sh
.github/workflow/: semi_linear_git_history.yml
.github/workflows/: semi_linear_git_history.yml
api/: Dockerfile
api/app/: database.py  main.py  requestModels.py
backend_services/: API_Dockerfile  DB_Dockerfile  Dockerfile  database_model.py  requirements.txt
backend_services/api_gateway/: Dockerfile  docker-compose.yaml  goaccess.conf  main.py  nginx.conf  nginx.dev.conf  nginx.prod.conf
backend_services/collab_editor_service/: Dockerfile  collab_editor_server.ts  package-lock.json  package.json
backend_services/collaboration_service/: Dockerfile  collaboration_server.ts  package.json  (+1 more)
backend_services/shared_definitions/: pyproject.toml  requirements.txt  setup.py
backend_services/shared_definitions/shared_definitions/: error.py  users.py
backend_services/shared_definitions/shared_definitions/api_models/: error.py  questions.py  users.py
backend_services/shared_definitions/shared_definitions/auth/: core.py  fastapi_dependencies.py
database/: init.sql
frontend/: .prettierignore  .prettierrc.json  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  package-lock.json  package.json  vite.config.ts
tests/: get_all_questions_test.py  get_all_sessions_test.py  get_all_users_test.py  matching_test.py  test_codes.py
(+180 files in other folders)
