[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_definitions"
version = "0.4.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
